--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@uptime.app/logger": "^1.0.16"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.72",
+    "@types/jest": "^26.0.20",
+    "@uptime.app/serverless-plugin-sqs-from-sns": "^1.0.17",
+    "@uptime.app/test-helpers": "^2.0.17",
+    "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
     "serverless": "^2.25.2",
     "serverless-export-env": "^1.4.1",
     "serverless-iam-roles-per-function": "^3.1.0",
@@ -25,6 +31,7 @@
     "serverless-plugin-aws-alerts": "^1.7.1",
     "serverless-prune-plugin": "^1.4.3",
     "serverless-pseudo-parameters": "^2.5.0",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
 }
