--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.20",
+    "@uptime.app/serverless-plugin-service-gateway": "^1.0.4",
     "@uptime.app/serverless-plugin-sqs-from-sns": "^1.0.17",
     "@uptime.app/test-helpers": "^2.0.17",
+    "diff": "^5.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
-    "serverless": "^2.25.2",
+    "serverless": "2.22.0",
+    "serverless-api-gateway-caching": "^1.6.1",
     "serverless-export-env": "^1.4.1",
     "serverless-iam-roles-per-function": "^3.1.0",
     "serverless-jetpack": "^0.10.8",
