--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@uptime.app/aws-sdk-helpers": "^1.0.9",
     "@uptime.app/logger": "^1.0.16"
   },
   "devDependencies": {
