--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "skipLibCheck": true,
       "build": true,
       "target": "ES2019",
       "module": "commonjs",
